--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   ],
   "scripts": {
     "build": "stencil build --docs",
-    "start": "stencil build --dev --watch --serve",
-    "test": "stencil test --spec --e2e",
-    "test.watch": "stencil test --spec --e2e --watchAll",
+    "serve": "stencil build --dev --watch --serve",
     "generate": "stencil generate"
   },
   "devDependencies": {
